--- a/package.json
+++ b/package.json
@@ -4,7 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "pretest": "eslint --ignore-path .gitignore .",
+    "test": "nyc --reporter=lcov mocha",
+    "prepare": "echo 'To confirm CVE compliance, run \"npm audit\"' ",
+    "release": "standard-version -a",
+    "openshift": "nodeshift --dockerImage=registry.access.redhat.com/ubi8/nodejs-16",
+    "openshift:enable:trace": "nodeshift --deploy.env NODE_OPTIONS='--require ./tracing.js' --dockerImage=registry.access.redhat.com/ubi8/nodejs-16",
+    "start": "node .",
+    "dev": "node . | npx pino-pretty",
+    "dev:debug": "DEBUG=* node . "
   },
   "author": "",
   "license": "ISC",
